@@ -56,28 +56,11 @@
 		</menu>
 
 		<menu action="menu-timings" name="menu-timings">
-			<placeholder name="times"/>
-			<placeholder name="frames"/>
-			<menu action="menu-framerate" name="menu-framerate">
-				<placeholder name="set-framerate-23.976"/>
-				<placeholder name="set-framerate-24"/>
-				<placeholder name="set-framerate-25"/>
-				<placeholder name="set-framerate-29.97"/>
-				<placeholder name="set-framerate-30"/>
-			</menu>
+			<placeholder name="time-mode-management"/>
 			<separator/>
 			<placeholder name="move-subtitles"/>
 			<!--separator/-->
-			<menu action="menu-adjust-time-add">
-				<placeholder name="add-to-start"/>
-				<placeholder name="add-to-duration"/>
-				<placeholder name="add-to-start-and-duration"/>
-			</menu>
-			<menu action="menu-adjust-time-remove">
-				<placeholder name="remove-to-start"/>
-				<placeholder name="remove-to-duration"/>
-				<placeholder name="remove-to-start-and-duration"/>
-			</menu>
+			<placeholder name="adjust-time"/>
 			<separator/>
 			<placeholder name="scale-subtitles"/>
 			<placeholder name="change-framerate"/>
@@ -106,74 +89,23 @@
 		</menu>
 
 		<menu action="menu-video">
-			<placeholder name="video-player/open"/>
-			<placeholder name="video-player/close"/>
-			<separator/>
-			<placeholder name="video-player/play"/>
-			<placeholder name="video-player/pause"/>
-			<placeholder name="video-player/play-pause"/>
-			<separator/>
-			<menu action="video-player/menu-skip-forward">
-				<placeholder name="video-player/skip-forward-very-short"/>
-				<placeholder name="video-player/skip-forward-short"/>
-				<placeholder name="video-player/skip-forward-medium"/>
-				<placeholder name="video-player/skip-forward-long"/>
-			</menu>
-			<menu action="video-player/menu-skip-backwards">
-				<placeholder name="video-player/skip-backwards-very-short"/>
-				<placeholder name="video-player/skip-backwards-short"/>
-				<placeholder name="video-player/skip-backwards-medium"/>
-				<placeholder name="video-player/skip-backwards-long"/>
-			</menu>
-			<menu action="video-player/menu-rate">
-				<placeholder name="video-player/rate-slower"/>
-				<placeholder name="video-player/rate-faster"/>
-				<placeholder name="video-player/rate-normal"/>
-			</menu>
-			<separator/>
-			<placeholder name="video-player/seek-to-selection"/>
-			<separator/>
-			<placeholder name="video-player/play-current-subtitle"/>
-			<placeholder name="video-player/play-next-subtitle"/>
-			<placeholder name="video-player/play-previous-subtitle"/>
-			<placeholder name="video-player/repeat"/>
-			<separator/>
-			<placeholder name="video-player/play-previous-second"/>
-			<placeholder name="video-player/play-first-second"/>
-			<placeholder name="video-player/play-last-second"/>
-			<placeholder name="video-player/play-next-second"/>
-			<separator/>
-			<placeholder name="video-player/set-subtitle-start"/>
-			<placeholder name="video-player/set-subtitle-end"/>
+			<placeholder name="video-player-management"/>
 		</menu>
 
 		<menu action="menu-waveform">
-			<placeholder name="waveform/open"/>
-			<placeholder name="waveform/save"/>
-			<separator/>
-			<placeholder name="waveform/zoom-in"/>
-			<placeholder name="waveform/zoom-out"/>
-			<placeholder name="waveform/zoom-selection"/>
-			<placeholder name="waveform/zoom-all"/>
-			<separator/>
-			<placeholder name="waveform/center-with-selected-subtitle"/>
-			<separator/>
-			<placeholder name="waveform/scrolling-with-player"/>
-			<placeholder name="waveform/scrolling-with-selection"/>
-			<placeholder name="waveform/respect-timing"/>
+			<placeholder name="waveform-management"/>
 		</menu>
 
 		<menu name="menu-view" action="menu-view">
-			<placeholder name="view-manager-placeholder"/>
+			<placeholder name="view-manager"/>
 			<separator/>
-			<placeholder name="video-player/display"/>
-			<placeholder name="waveform/display"/>
+			<placeholder name="display-placeholder"/>
 		</menu>
 
-		<menu action="menu-external-video-player">
+		<!--menu action="menu-external-video-player">
 			<placeholder name="external-video-player/open-video"/>
 			<placeholder name="external-video-player/play-video"/>
-		</menu>
+		</menu-->
 
 		<menu name="menu-options" action="menu-options">
 			<placeholder name="preferences"/>
